--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,12 @@ repositories {
 dependencies {
     // Cassandra drivers
     implementation 'com.datastax.oss:java-driver-core:4.15.0'
+    implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
     implementation 'com.datastax.oss:java-driver-query-builder:4.15.0'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
     compileOnly 'org.projectlombok:lombok:1.18.36'
+
+    annotationProcessor 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.36'
