--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,7 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+.idea
+
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
